--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,6 @@
-blinker==1.6.2
-brotlipy==0.7.0
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==2.0.4
-click==8.1.7
-colorama==0.4.6
-cryptography==41.0.3
-filelock==3.9.0
-Flask==2.3.3
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.1
-mkl-fft==1.3.6
-mkl-random==1.2.2
-mkl-service==2.4.0
-mpmath==1.3.0
-networkx==3.1
-numpy==1.25.2
-pandas==2.1.0
-Pillow==10.0.1
-pip==23.2.1
-pycparser==2.21
-pyOpenSSL==23.2.0
-PySocks==1.7.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
-requests==2.31.0
-setuptools==68.0.0
-six==1.16.0
-sympy==1.11.1
-torch==2.0.1
-torchvision==0.15.2
-typing_extensions==4.7.1
-tzdata==2023.3
-urllib3==1.26.16
-Werkzeug==2.3.7
-wheel==0.38.4
-win-inet-pton==1.1.0
+flask = "*"
+Pillow = "*"
+torch = "*"
+torchvision = "*"
+pandas = "*"
+numpy = "*"
