--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==2.3.3
-pandas==2.0.3
-numpy==1.24.4
-Pillow==10.0.1
-torch==2.0.1
-torchvision==0.15.2
+Flask
+pandas
+numpy
+Pillow
+torch
+torchvision
 gunicorn
