--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask
-pandas
-numpy
-Pillow
-torch
-torchvision
-gunicorn
+Flask==2.3.3
+numpy==1.25.2
+pandas==2.1.0
+Pillow==10.0.1
+torch==2.0.1
+torchvision==0.15.2
+gunicorn==21.2.0
