--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,16 @@
-blinker==1.6.2
-certifi==2023.7.22
-charset-normalizer==3.2.0
-click==8.1.7
-colorama==0.4.6
-filelock==3.12.4
-Flask==2.3.3
-gunicorn==21.2.0
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-mpmath==1.3.0
-networkx==3.1
-numpy==1.25.2
-packaging==23.1
-pandas==2.1.0
-Pillow==10.0.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
-requests==2.31.0
-six==1.16.0
-sympy==1.12
-torch==2.0.1
-torchvision==0.15.2
-typing_extensions==4.8.0
-tzdata==2023.3
-urllib3==2.0.5
-Werkzeug==2.3.7
+click==7.1.2
+Flask==1.1.2
+gunicorn==20.1.0
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+numpy==1.20.2
+pandas==1.2.4
+Pillow==8.2.0
+python-dateutil==2.8.1
+pytz==2021.1
+six==1.15.0
+torch==1.8.1
+torchvision==0.9.1
+typing-extensions==3.7.4.3
+Werkzeug==1.0.1
